smart contract mocking smock waffle

--- a/package.json
+++ b/package.json
@@ -14,17 +14,25 @@
     "build": "npm-run-all clean transpile",
     "clean": "rimraf build",
     "transpile": "babel ./ --out-dir build --extensions .ts",
-    "build-test": "npm-run-all build test"
+    "waffle-build": "waffle"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ethereum-waffle/mock-contract": "^4.0.4",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@openzeppelin/contracts": "^4.8.3",
     "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ethers": "^5.7.2",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
-    "hardhat": "^2.14.0",
+    "hardhat-ethers": "^1.0.1",
+    "hardhat-jest": "^1.0.8",
+    "hardhat-waffle": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
@@ -40,12 +48,16 @@
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-typescript": "^7.21.5",
     "@babel/types": "^7.21.5",
+    "@defi-wonderland/smock": "^2.3.4",
+    "@ethereum-waffle/compiler": "^4.0.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
     "@types/mongoose": "^5.11.97",
     "@types/supertest": "^2.0.12",
     "babel-plugin-module-resolver": "^5.0.0",
     "cross-env": "^7.0.3",
+    "ethereum-waffle": "^4.0.10",
+    "hardhat": "^2.14.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
